# x-claw_lenovo

./: .env.example  Dockerfile  README.md  X-Claw_Expert_Team_Improvement_Report_v2.md  X-Claw_Technical_Analysis_Report.md  X-Claw_V2_MiroThinker30B_Deployment_Tasklist.md  docker-compose.yml  pyproject.toml  solution_v1.md  x-claw_project_doc.md  x-claw_project_doc_v2.md
config/: app.example.yaml  mcp_servers.example.yaml
x_claw/: bootstrap.py  main.py  schemas.py  settings.py
x_claw/adapters/: base.py  feishu_adapter.py  teams_adapter.py
x_claw/core/: capability_manager.py  engine.py  llm_provider.py  memory_store.py  models.py  quota_manager.py  session_store.py  task_router.py
x_claw/mcp/: client_wrapper.py  health_checker.py
x_claw/observability/: logging_utils.py  metrics.py
